--- a/grid.css
+++ b/grid.css
@@ -20,7 +20,10 @@
     margin-left: 0;
     margin-right: 0;
 }
-
+.col {
+    padding-left: 4px;
+    padding-right: 4px;
+}
 .col {
     padding-left: 4px;
     padding-right: 4px;
